# game

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  xgraph
demo/: main.c
demo/DungeonRush/: Makefile  snake.c
demo/DungeonRush/src/: ai.c  bullet.c  game.c  helper.c  main.c  net.c  render.c  res.c  types.c  ui.c  weapon.c
demo/DungeonRush/test/: test.c
demo/dungeon_rush/: audio.h  game.c  helper.c  helper.h  render.c  render.h  res.c  res.h  snake.c  types.c  types.h  ui.c  ui.h
demo/snake/: main.c  snake.c  snake_version.h
demo/test/: main_test.c
demo/vs/snake/: main.c
snake/: debug.h  main.c  snake.sln  snake.vcxproj  snake.vcxproj.filters
src/: external.h
src/demo/DungeonRush/src/: ai.c  audio.c  bullet.c  game.c  helper.c  map.c  player.c  prng.c  render.c  res.c  sprite.c  storage.c  types.c  types.h  weapon.c
src/demo/DungeonRush/test/: test.c
src/demo/snake/: snake.c
src/lib/log/: log.c
src/lib/queue/: queue_2_val.c
src/lib/ringbuffer/: ringbuffer.c  ringbuffer.h
src/lib/snake/: README.md  snake.c
src/lib/stack/: stack.c  stack.h  stack_2_val.c
src/lib/tiny_crypto/: aes_decrypt.c  aes_encrypt.c  tc_aes.h  tc_utils.h
src/test/: test.c  test.h  test_queue.c  test_stack.c
src/utils/: common.h  debug.h  dump.c  error.h  kb.c  log.h  max.c  sort.c  utils.c  utils.h
src/utils/common/: common.h
